2020-12-09  Dmitry V. Levin  <ldv@altlinux.org>

	* Makefile.am (noinst_PROGRAMS): Rename to noinst_DATA.
	(libdw_so_SOURCES): Remove.
	(MOSTLYCLEANFILES): Add libdw.so.

2020-11-30  Dmitry V. Levin  <ldv@altlinux.org>

	* Makefile.am (libdw.so$(EXEEXT)): Drop $(EXEEXT) suffix.

2020-11-01  Érico N. Rolim  <erico.erc@gmail.com>

	* Makefile.am (libdw_so_LDLIBS): Add fts_LIBS.

2020-10-28  Tom Tromey  <tom@tromey.com>

	PR26773
	* dwarf_getlocation.c (store_implicit_value): Use
	__libdw_get_uleb128_unchecked.
	* memory-access.h (get_sleb128_step): Assume unsigned type for
	'var'.
	(__libdw_get_sleb128, __libdw_get_sleb128_unchecked): Work in
	unsigned type.  Handle final byte.

2020-10-19  Mark Wielaard  <mark@klomp.org>

	* dwarf_frame_register.c (dwarf_frame_register): Declare ops_mem
	as array of (at least) 3 elements.
	* libdw.h (dwarf_frame_register): Add extra explanation of ops_mem
	argument.

2020-10-23  Tom Tromey  <tom@tromey.com>

	* memory-access.h (read_3ubyte_unaligned_inc): Call
	read_3ubyte_unaligned.

2020-09-03  Mark Wielaard  <mark@klomp.org>

	* dwarf.h: Add DW_CFA_AARCH64_negate_ra_state.
	* cfi.h (struct Dwarf_CFI_s): Add e_machine field.
	* cfi.c (execute_cfi): Recognize, but ignore
	DW_CFA_AARCH64_negate_ra_state on aarch64.
	* dwarf_getcfi.c (dwarf_getcfi): Set cfi e_machine.
	* dwarf_getcfi_elf.c (allocate_cfi): Take ehdr as argument and set
	cfi e_machine.
	(getcfi_gnu_eh_frame): Pass ehdr to allocate_cfi.
	(getcfi_scn_eh_frame): Likewise.

2020-09-03  Mark Wielaard  <mark@klomp.org>

	* libdw.map (ELFUTILS_0.126): Remove local wildcard.
	(ELFUTILS_0.127): Likewise.
	(ELFUTILS_0.130): Likewise.
	(ELFUTILS_0.136): Likewise.
	(ELFUTILS_0.138): Likewise.

2020-08-25  Mark Wielaard  <mark@klomp.org>

	* dwarf_getlocation.c (check_constant_offset): Rename to...
	(is_constant_offset): .. this.

2020-06-28  Mark Wielaard  <mark@klomp.org>

	* linux-kernel-modules.c (intuit_kernel_bounds): Check read_address