@@ -1014,7 +1014,7 @@ enum
 /* Section 7.2.2 of the DWARF3 specification defines a range of escape
    codes that can appear in the length field of certain DWARF structures.
 
-   These defines enumerate the minium and maximum values of this range.
+   These defines enumerate the minimum and maximum values of this range.
    Currently only the maximum value is used (to indicate that 64-bit
    values are going to be used in the dwarf data that accompanies the
    structure).  The other values are reserved.
